--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>PWA Test</title>
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/clock/manifest.json">
     <style>
     html, body, .container, .indic {
         height: 100%;
